traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:18: error: reassignment to val
    y=y-1;
     ^